# hey-capsule

./: AGENTS.md  Cargo.toml  MODERNIZATION_SUMMARY.md  README.md
.github/workflows/: verify-dist.yml
capsules/blobs-provider/: Cargo.toml
capsules/content-provider/: STATUS.md  capsule.json
capsules/docs-provider/: Cargo.toml
capsules/hey-chat/: Cargo.toml  styles.css
capsules/hey-chat/src/: crypto.rs  ctx.rs  identity.rs  lib.rs  peer_receiver.rs  runtime.rs
capsules/hey-chat/src/api/: dms.rs  profile.rs
capsules/hey-core/: Cargo.toml
capsules/hey-core/src/: crypto.rs  ctx.rs  events.rs  lib.rs  passkey.rs  peer_receiver.rs  runtime.rs  session.rs
capsules/hey-core/src/api/: dms.rs  mod.rs  outbox.rs  profile.rs
capsules/hey-messenger/: Cargo.toml  capsule.json  index.html  styles.css
capsules/hey-messenger/client/src/: App.jsx  main.jsx
capsules/hey-messenger/client/src/api/: passkey.js
capsules/hey-messenger/client/src/components/: AddContactModal.jsx  ChannelList.jsx  Composer.jsx  Inspector.jsx
capsules/hey-messenger/client/src/lib/: contacts.js  runtime.js
capsules/hey-messenger/client/src/state/: store.jsx
capsules/hey-messenger/src/: lib.rs  main.rs
capsules/hey-social/: Cargo.toml  Trunk.toml  capsule.json  index.html  rust-toolchain.toml  welcome-animations.css
capsules/hey-social-rust/: Cargo.toml  Trunk.toml  capsule.json  index.html  welcome-animations.css
capsules/hey-social-rust/src/: crypto.rs  lib.rs  main.rs  passkey.rs  peer_receiver.rs  runtime.rs  session.rs
capsules/hey-social-rust/src/api/: dms.rs
capsules/hey-social-rust/src/components/: floating_dock.rs  header.rs  mod.rs  modal.rs  nav_link.rs
capsules/hey-social-rust/src/pages/: chat.rs  clips.rs  home.rs  landing.rs  misc.rs  mod.rs  onboarding.rs  posts.rs  signup.rs
capsules/hey-social/client/: package-lock.json  package.json
capsules/hey-social/client/src/: main.jsx
capsules/hey-social/client/src/api/: auth.js  passkey.js
capsules/hey-social/client/src/lib/: ipld.js  runtime.js
capsules/hey-social/client/src/pages/: Landing.jsx  Onboarding.jsx
capsules/hey-social/scripts/: deploy-local.sh  deploy-remote.sh
capsules/hey-social/src/: app_modals.rs  crypto.rs  events.rs  identity.rs  ipld.rs  lib.rs  main.rs  passkey.rs  peer_receiver.rs  runtime.rs  session.rs  shell.rs
capsules/hey-social/src/api/: dms.rs  groups.rs  mod.rs  notifications.rs  outbox.rs  posts.rs  profile.rs
capsules/hey-social/src/components/: add_friend_modal.rs  floating_dock.rs  header.rs  icons.rs  link_phone_modal.rs  mod.rs  nav_link.rs  new_group_modal.rs  notification_panel.rs  post_card.rs  search_modal.rs  sign_in_gate.rs
capsules/hey-social/src/pages/: chat.rs  clips.rs  home.rs  landing.rs  misc.rs  mod.rs  onboarding.rs  post_detail.rs  posts.rs  profile.rs  signin.rs  signup.rs  video_player.rs
capsules/identity-projection-provider/: Cargo.toml  STATUS.md  capsule.json
capsules/identity-projection-provider/src/: main.rs
capsules/peer-provider/: Cargo.toml  capsule.json
capsules/peer-provider/src/: main.rs
capsules/webrtc-signal-provider/: Cargo.toml
client/: index.html  package-lock.json  package.json  vite.config.js
client/src/: App.jsx  index.css  main.jsx
client/src/api/: auth.js  chat.js  passkey.js
client/src/components/: DeleteAccountModal.jsx  EncryptionBadge.jsx  PostCard.jsx  SafeMedia.jsx  SearchModal.jsx  SignInModal.jsx  icons.jsx
client/src/hooks/: useShell.js
client/src/lib/: events.js  identity.js  keystore.js  mode.js  pqcrypto.js  profile.js  runtime.js  session.js  shell.js  vault.js
client/src/pages/: Chat.jsx  Landing.jsx  Posts.jsx  Profile.jsx  SignUp.jsx  VideoPlayer.jsx
docs/: architecture-audit-2026-05.md  hey-chat-presentation.html  hey-core-migration.md  runtime-quick-reference.md
server/: app.js  package-lock.json  package.json
server/controllers/: chat.controller.js  notification.controller.js  passkey.controller.js  post.controller.js  user.controller.js
server/data/: db.json
server/middlewares/: auth.js  optionalAuth.js
server/routes/: chat.route.js  passkey.route.js  post.route.js  user.route.js
server/utils/: db.js  identity.js  identity.test.js  media.js  notifications.js  secrets.js
