[workspace]
# Convenience workspace for development at the pack root —
# `cargo build` here builds all three providers in one go.
# Each provider is also a self-contained crate so it can be built
# standalone when the runtime fetches it (no workspace inheritance).
resolver = "2"
members = [
    "capsules/blobs-provider",
    "capsules/docs-provider",
    "capsules/webrtc-signal-provider",
]
