[workspace]
# Convenience workspace for development at the pack root —
# `cargo build` here builds all three providers in one go.
# Each provider is also a self-contained crate so it can be built
# standalone when the runtime fetches it (no workspace inheritance).
#
# hey-social is a wasm32-only Leptos crate; build it with
# `trunk build` from its directory, not `cargo build` at the root.
resolver = "2"
members = [
    "capsules/blobs-provider",
    "capsules/content-provider",
    "capsules/docs-provider",
    "capsules/identity-projection-provider",
    "capsules/webrtc-signal-provider",
    "capsules/hey-social",
    # Shared chat engine (rlib) consumed by hey-social + hey-messenger.
    # wasm32-only — kept out of default-members (see below).
    "capsules/hey-chat",
    # Rust/Leptos messenger (Telegram-desktop replacement) — wasm32-only,
    # built with trunk; kept out of default-members like hey-social.
    "capsules/hey-messenger",
]
default-members = [
    "capsules/blobs-provider",
    "capsules/content-provider",
    "capsules/docs-provider",
    "capsules/identity-projection-provider",
    "capsules/webrtc-signal-provider",
]

[profile.release]
opt-level = 3
lto = true

