[package]
name = "blobs-provider"
description = "iroh-blobs direct peer-to-peer file transfer for hey-messenger"
version = "0.0.1"
edition = "2021"
license = "MIT"
authors = ["HeyElastos"]

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "io-std", "io-util", "fs", "sync", "signal"] }
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
base64 = "0.22"

iroh = "1.0.0-rc.1"
iroh-blobs = "0.102"
n0-future = "0.2"

[[bin]]
name = "blobs-provider"
path = "src/main.rs"

[[bin]]
name = "blobs-transfer-test"
path = "src/bin/transfer_test.rs"
