[package]
name = "docs-provider"
description = "iroh-docs CRDT workspace state for hey-messenger"
version = "0.0.1"
edition = "2021"
license = "MIT"
authors = ["HeyElastos"]

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "io-std", "io-util", "fs", "sync", "signal"] }
anyhow = "1"
tracing = "0.1"
# Filled in later:
# iroh = "0.28"
# iroh-docs = "0.28"

[[bin]]
name = "docs-provider"
path = "src/main.rs"
