[package]
name = "hey-social-rust"
description = "Hey Social — Rust + Leptos + WASM port of the photo/video/chat capsule"
version = "0.0.1"
edition = "2021"
license = "MIT"
authors = ["HeyElastos"]

[dependencies]
leptos = { version = "0.7", features = ["csr"] }
leptos_router = "0.7"
console_error_panic_hook = "0.1"
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
gloo-net = { version = "0.6", features = ["http", "json"] }
gloo-storage = "0.3"
js-sys = "0.3"

[dependencies.web-sys]
version = "0.3"
features = [
  "Window",
  "Document",
  "Element",
  "HtmlElement",
  "HtmlInputElement",
  "HtmlVideoElement",
  "Storage",
  "Crypto",
  "SubtleCrypto",
  "CryptoKey",
  "IdbDatabase",
  "IdbFactory",
  "IdbObjectStore",
  "IdbTransaction",
  "CredentialsContainer",
  "PublicKeyCredential",
]

