[package]
name = "hey-social-rust"
description = "Hey Social — Rust + Leptos + WASM port of the photo/video/chat capsule"
version = "0.0.1"
edition = "2021"
license = "MIT"
authors = ["HeyElastos"]

[dependencies]
leptos = { version = "0.7", features = ["csr"] }
leptos_router = "0.7"
console_error_panic_hook = "0.1"
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde-wasm-bindgen = "0.6"
gloo-net = { version = "0.6", features = ["http", "json"] }
gloo-storage = "0.3"
gloo-timers = { version = "0.3", features = ["futures"] }
js-sys = "0.3"
ed25519-compact = { version = "2", default-features = false }
base64 = "0.22"
sha2 = "0.10"
uuid = { version = "1", features = ["v4", "js"] }
# dag-cbor: ciborium encodes canonical CBOR; combined with our struct
# field order matching dag-cbor's len-first-then-lex map-key ordering,
# produces byte-identical output to @ipld/dag-cbor (verified vs hey-social).
ciborium = { version = "0.2", default-features = false }
ciborium-io = "0.2"
# Post-quantum E2E for DMs — hybrid ML-KEM-768 + X25519 + ChaCha20Poly1305,
# same construction as @noble-based hey-messenger/lib/pqcrypto.js.
ml-kem = "0.2"
x25519-dalek = { version = "2", default-features = false, features = ["static_secrets", "zeroize"] }
chacha20poly1305 = { version = "0.10", default-features = false, features = ["alloc", "rand_core"] }
hkdf = "0.12"
rand_core = { version = "0.6", features = ["std"] }
getrandom = { version = "0.2", features = ["js"] }

[dependencies.web-sys]
version = "0.3"
features = [
  "Window",
  "Location",
  "UrlSearchParams",
  "Document",
  "Element",
  "Event",
  "EventTarget",
  "HtmlElement",
  "HtmlInputElement",
  "HtmlSelectElement",
  "HtmlTextAreaElement",
  "HtmlVideoElement",
  "HtmlImageElement",
  "Blob",
  "File",
  "FileList",
  "FileReader",
  "Storage",
  "Crypto",
  "SubtleCrypto",
  "CryptoKey",
  "IdbDatabase",
  "IdbFactory",
  "IdbObjectStore",
  "IdbTransaction",
  "CredentialsContainer",
  "PublicKeyCredential",
  "Navigator",
  "Clipboard",
  "console",
]

