[package]
name = "hey-social"
description = "Hey Social — Rust + Leptos + WASM port of the photo/video/chat capsule"
version = "0.0.1"
edition = "2021"
license = "MIT"
authors = ["HeyElastos"]

[dependencies]
# Shared chat engine (rlib). hey-social consumes the security-critical core
# from here so it stays byte-identical to hey-messenger — one chat network,
# one audit surface. Migrated leaf-first: crypto + identity are re-exported
# from the engine (see src/crypto.rs, src/identity.rs). The runtime-boundary
# modules (runtime/session/passkey/peer_receiver) still carry hey-social's
# own per-capsule wiring and move to the engine's CapsuleCtx in a later phase.
hey-core = { path = "../hey-core" }
leptos = { version = "0.7", features = ["csr"] }
leptos_router = "0.7"
console_error_panic_hook = "0.1"
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde-wasm-bindgen = "0.6"
gloo-net = { version = "0.6", features = ["http", "json"] }
gloo-storage = "0.3"
gloo-timers = { version = "0.3", features = ["futures"] }
# Concurrent provider fetches — futures::future::join_all keeps N requests
# in flight on the single WASM thread, so a feed page resolves in ~one batch
# instead of N sequential round-trips. alloc-only; no std threads needed.
futures = { version = "0.3", default-features = false, features = ["alloc"] }
js-sys = "0.3"
ed25519-compact = { version = "2", default-features = false }
base64 = "0.22"
sha2 = "0.10"
uuid = { version = "1", features = ["v4", "js"] }
# dag-cbor: ciborium encodes canonical CBOR; combined with our struct
# field order matching dag-cbor's len-first-then-lex map-key ordering,
# produces byte-identical output to @ipld/dag-cbor (verified vs hey-social).
ciborium = { version = "0.2", default-features = false }
ciborium-io = "0.2"
# Post-quantum E2E for DMs — hybrid ML-KEM-768 + X25519 + ChaCha20Poly1305,
# same construction as @noble-based hey-messenger/lib/pqcrypto.js.
ml-kem = "0.2"
x25519-dalek = { version = "2", default-features = false, features = ["static_secrets", "zeroize"] }
chacha20poly1305 = { version = "0.10", default-features = false, features = ["alloc", "rand_core"] }
hkdf = "0.12"
rand_core = { version = "0.6", features = ["std"] }
getrandom = { version = "0.2", features = ["js"] }
# QR code generation for invite-link sharing. pure-Rust, no syscalls
# — emits an SVG string we inline into the Leptos view via inner_html.
qrcode = { version = "0.14", default-features = false, features = ["svg"] }

[dependencies.web-sys]
version = "0.3"
features = [
  "Window",
  "Location",
  "UrlSearchParams",
  "Document",
  "Element",
  "Event",
  "EventTarget",
  "HtmlElement",
  "HtmlInputElement",
  "HtmlSelectElement",
  "HtmlTextAreaElement",
  "HtmlVideoElement",
  "HtmlImageElement",
  "Blob",
  "DataTransfer",
  "DragEvent",
  "File",
  "FileList",
  "FileReader",
  "Storage",
  "Crypto",
  "SubtleCrypto",
  "CryptoKey",
  "IdbDatabase",
  "IdbFactory",
  "IdbObjectStore",
  "IdbTransaction",
  "CredentialsContainer",
  "PublicKeyCredential",
  "Navigator",
  "Clipboard",
  "console",
]

