[package]
name = "peer-provider"
description = "iroh-gossip peer-to-peer pub/sub provider — backs Hey chat/feed federation"
version = "0.0.1"
edition = "2021"
license = "MIT"
authors = ["HeyElastos"]

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "io-std", "io-util", "fs", "sync", "signal", "time"] }
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
base64 = "0.22"
blake3 = "1"
hex = "0.4"
parking_lot = "0.12"

# Same iroh stack as blobs-provider, so a YunoHost install only fetches
# one set of compiled-in iroh artefacts. The actual pub/sub primitive
# is iroh-gossip — a thin wrapper around HyParView + Plumtree on top
# of the iroh QUIC endpoint.
iroh = "1.0.0-rc.1"
iroh-gossip = "0.100"
n0-future = "0.2"
futures-lite = "2"
futures-util = "0.3"
rand = "0.8"
bytes = "1"

[[bin]]
name = "peer-provider"
path = "src/main.rs"
