[package]
name = "webrtc-signal-provider"
description = "WebRTC SDP/ICE signaling over Carrier gossip for hey-messenger calls"
version = "0.0.1"
edition = "2021"
license = "MIT"
authors = ["HeyElastos"]

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "io-std", "io-util", "fs", "sync", "signal"] }
anyhow = "1"
tracing = "0.1"

[[bin]]
name = "webrtc-signal-provider"
path = "src/main.rs"
